feat add requirement to work with geminiAi

--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ SMTP_USER=smtp_user
 SMTP_PASSWORD=smtp_password
 EMAILS_FROM_EMAIL=no-reply@example.com
 EMAILS_FROM_NAME=Example
-API_OPEN_AI=ASDASD
+API_OPEN_GEMINI=AIzaSyCR7XBdaOC_WXmKTXVY_SJDx1PSE1xSeyU
