feat:added rag config initial

--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ SMTP_PASSWORD=smtp_password
 EMAILS_FROM_EMAIL=no-reply@example.com
 EMAILS_FROM_NAME=Example
 API_OPEN_GEMINI=AIzaSyCR7XBdaOC_WXmKTXVY_SJDx1PSE1xSeyU
+API_CHROMA=http://localhost:8000
